--- a/Endpoints/Api/appsettings.Development.json
+++ b/Endpoints/Api/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-HOMUGP3;Initial Catalog=PardisAcademy;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "Key": "Pardis-Academy-Super-Secret-Key-2025-Must-Be-Long",
+    "Issuer": "PardisAcademy",
+    "Audience": "PardisUsers"
   }
 }
