--- a/Pardis.Facade/Pardis.Facade.csproj
+++ b/Pardis.Facade/Pardis.Facade.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="13.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Pardis.Application\Pardis.Application.csproj" />
+    <ProjectReference Include="..\Pardis.Domain\Pardis.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
