--- a/Endpoints/Api/appsettings.Development.json
+++ b/Endpoints/Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=pardis;User=root;Password=;"
+    "DefaultConnection": "Data Source=DESKTOP-HOMUGP3;Initial Catalog=PardisAcademy;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "JwtSettings": {
     "Key": "Pardis-Academy-Super-Secret-Key-2025-Must-Be-Long",
