--- a/Endpoints/Api/appsettings.Development.json
+++ b/Endpoints/Api/appsettings.Development.json
@@ -9,8 +9,8 @@
     "DefaultConnection": "Data Source=DESKTOP-HOMUGP3;Initial Catalog=PardisAcademy;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "JwtSettings": {
-    "Key": "Pardis-Academy-Super-Secret-Key-2025-Must-Be-Long",
+    "Key": "PardisAcademySecretKeyForJWT2024WithMoreThan32Characters!@#$%",
     "Issuer": "PardisAcademy",
-    "Audience": "PardisUsers"
+    "Audience": "PardisAcademyUsers"
   }
 }
