--- a/Endpoints/Api/appsettings.json
+++ b/Endpoints/Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "PardisAcademySecretKeyForJWT2024WithMoreThan32Characters!@#$%",
+    "Issuer": "PardisAcademy",
+    "Audience": "PardisAcademyUsers"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=PardisAcademy;Trusted_Connection=true;TrustServerCertificate=true;"
+  }
 }
