--- a/Pardis.Query/Pardis.Query.csproj
+++ b/Pardis.Query/Pardis.Query.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pardis.Application\Pardis.Application.csproj" />
     <ProjectReference Include="..\Pardis.Domain\Pardis.Domain.csproj" />
+    <ProjectReference Include="..\Pardis.Infrastructure\Pardis.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
