--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -1,8 +1,7 @@
-name: Deploy API to Server
+name: Simple Deploy API to Server
 
 on:
-  push:
-    branches: [master]
+  workflow_dispatch: # Manual trigger only
 
 jobs:
   deploy:
@@ -15,7 +14,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: "8.0.x"
+          dotnet-version: "9.0.x"
 
       # Build Backend Only
       - name: Build API
@@ -59,74 +58,8 @@ jobs:
             </system.webServer>
           </configuration>' > deployment\web.config
 
-          # Create app_offline.htm to stop the application during deployment
-          # Note: This will be uploaded separately, not included in main deployment
-
-      # Step 1: Upload app_offline.htm to stop the application
-      - name: Stop Application
-        run: |
-          # Create a simple app_offline.htm file
-          echo '<!DOCTYPE html>
-          <html>
-          <head>
-              <title>Application Offline</title>
-              <meta charset="utf-8" />
-          </head>
-          <body>
-              <h1>Application is being updated</h1>
-              <p>The application is currently being updated. Please try again in a few moments.</p>
-          </body>
-          </html>' > app_offline.htm
-
-          # Create FTP script with proper Windows syntax
-          @"
-          open ftp.api.pardistous.ir
-          ewan
-          mahan1384@
-          binary
-          put app_offline.htm
-          quit
-          "@ | Out-File -FilePath "ftp_stop.txt" -Encoding ASCII
-
-          # Execute FTP command
-          ftp -s:ftp_stop.txt
-
-          # Cleanup
-          Remove-Item ftp_stop.txt -ErrorAction SilentlyContinue
-          Remove-Item app_offline.htm -ErrorAction SilentlyContinue
-
-          Write-Host "app_offline.htm uploaded successfully"
-
-      # Wait for application to stop completely
-      - name: Wait for application to stop
-        run: |
-          Write-Host "Waiting for application to stop completely..."
-          Start-Sleep -Seconds 45
-          Write-Host "Application should be stopped now..."
-
-      # Step 2: Deploy all files (now that app is offline)
+      # Deploy directly without app_offline.htm
       - name: Deploy to Server
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        with:
-          server: ftp.api.pardistous.ir
-          username: ewan
-          password: mahan1384@
-          local-dir: ./deployment/
-          server-dir: /
-          # Add retry and timeout settings
-          timeout: 60000
-        continue-on-error: true
-        id: deploy_attempt_1
-
-      # Retry deployment if first attempt failed
-      - name: Retry Deploy if Failed
-        if: steps.deploy_attempt_1.outcome == 'failure'
-        run: |
-          Write-Host "First deployment failed, waiting longer and retrying..."
-          Start-Sleep -Seconds 60
-
-      - name: Deploy to Server (Retry)
-        if: steps.deploy_attempt_1.outcome == 'failure'
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ftp.api.pardistous.ir
@@ -136,33 +69,13 @@ jobs:
           server-dir: /
           timeout: 120000
 
-      # Step 3: Remove app_offline.htm to start the application
-      - name: Start Application
-        run: |
-          # Create FTP script to delete app_offline.htm
-          @"
-          open ftp.api.pardistous.ir
-          ewan
-          mahan1384@
-          delete app_offline.htm
-          quit
-          "@ | Out-File -FilePath "ftp_delete.txt" -Encoding ASCII
-
-          # Execute FTP command
-          ftp -s:ftp_delete.txt
-
-          # Cleanup
-          Remove-Item ftp_delete.txt -ErrorAction SilentlyContinue
-
-          Write-Host "app_offline.htm removed successfully"
-
       # Simple health check
       - name: Check if deployed
         run: |
           Write-Host "Waiting for application to start..."
           Start-Sleep -Seconds 60
 
-          $maxAttempts = 5
+          $maxAttempts = 3
           $attempt = 1
 
           while ($attempt -le $maxAttempts) {
