--- a/web.config
+++ b/web.config
@@ -12,7 +12,10 @@
                   hostingModel="inprocess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
-          <environmentVariable name="ASPNETCORE_URLS" value="http://+:80" />
+          <environmentVariable name="ASPNETCORE_URLS" value="http://+:80" /><aspNetCore processPath="dotnet" arguments=".\Api.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" hostingModel="inprocess">
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
+          <environmentVariable name="ConnectionStrings__DefaultConnection"
+                              value="Server=localhost;Database=pardisto_api;User Id=mahan;Password=ewan1384@;TrustServerCertificate=True;" />
         </environmentVariables>
       </aspNetCore>
       
